# turbopuffer-client

./: .env.example  .gitignore  .lintstagedrc.js  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  package.json  pnpm-lock.yaml  rustfmt.toml
.github/actions/setup-tools/: action.yml
.github/workflows/: ci.yml
src/: error.rs  lib.rs  response.rs
tests/: test.rs
